--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,21 +1,107 @@
-nav {
+/* body {
+  display: flex;
+  justify-content: center;
+} */
+
+header {
   width: 100%;
-  height: 50px;
+  margin: 0;
+  position: sticky;
+  display: flex;
+  justify-content: center;
+  border-bottom: solid lightgrey 1px;
+}
+
+header > nav {
+  /* width: 80%px; */
+  padding-left: 80px;
+  padding-right: 80px;
+  height: 80px;
   align-items: center;
   display: flex;
   justify-content: space-between;
-  border-bottom: solid black 2px;
+  max-width: 1760px;
+  width: 80%;
 }
 
-nav a {
-  display: block;
+/* nav a {
+  display: flex;
   align-items: center;
   text-decoration: none;
   color: black;
   margin: 20px;
   padding: 10px;
+} */
+
+#logo {
+  width: 160px;
 }
 
-.logo {
-  max-width: 150px;
+#main-nav-menu {
+  /* margin-top: 7px; */
+  display: flex;
+  justify-content: center;
+}
+
+
+#main-nav-menu > #main-nav-menu-button {
+  display: flex;
+  width: 77px;
+  height: 42px;
+  align-items: center;
+  justify-content: space-around;
+  background: transparent;
+  cursor: pointer;
+  margin: 0;
+  text-align: inherit;
+  border: 1px solid lightgrey;
+  border-radius: 21px;
+  /* margin-top: 7px; */
+}
+
+#main-nav-menu-button:hover {
+  box-shadow: 0 2px 5px rgba(33,33,33,.2);
+}
+
+#main-nav-menu-button > #three-bars {
+  width: 16px;
+  height: 16px;
+}
+
+#login-signup-wrapper {
+  background-color: red;
+  position: relative;
+  top: 60px;
+  right: 120px;
+  width: 0;
+  height: 0;
+}
+
+#login-wrapper {
+  width: 200px;
+  height: 40px;
+  display: flex;
+  flex-flow: column;
+  align-items: left;
+  border: 1px lightgrey solid;
+  border-radius: 15px;
+  background-color: white;
+  font-family: sans-serif;
+
+  padding: 10px;
+}
+
+#signup-button {
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  font-weight: bold;
+}
+
+#login-button {
+  cursor: pointer;
+}
+
+#login-button:hover, #signup-button:hover {
+  background-color: rgb(232, 232, 232);
 }
