--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,8 +1,3 @@
-/* body {
-  display: flex;
-  justify-content: center;
-} */
-
 header {
   width: 100%;
   margin: 0;
@@ -24,27 +19,18 @@ header > nav {
   width: 80%;
 }
 
-/* nav a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: black;
-  margin: 20px;
-  padding: 10px;
-} */
-
 #logo {
   width: 160px;
 }
 
-#main-nav-menu {
+#main-nav-menu, #main-logged-in-menu {
   /* margin-top: 7px; */
   display: flex;
   justify-content: center;
 }
 
 
-#main-nav-menu > #main-nav-menu-button {
+#main-nav-menu > #main-nav-menu-button, #main-logged-in-menu > #main-logged-in-menu-button {
   display: flex;
   width: 77px;
   height: 42px;
@@ -59,17 +45,17 @@ header > nav {
   /* margin-top: 7px; */
 }
 
-#main-nav-menu-button:hover {
+#main-nav-menu-button:hover, #main-logged-in-menu-button:hover {
   box-shadow: 0 2px 5px rgba(33,33,33,.2);
 }
 
-#main-nav-menu-button > #three-bars {
+#main-nav-menu-button > #three-bars, #main-logged-in-menu-button > #three-bars {
   width: 16px;
   height: 16px;
 }
 
-#login-signup-wrapper {
-  background-color: red;
+#login-logout-wrapper {
+  /* background-color: red; */
   position: relative;
   top: 50px;
   right: 205px;
@@ -77,7 +63,7 @@ header > nav {
   height: 0;
 }
 
-#login-wrapper {
+#login-wrapper, #logout-wrapper {
   width: 200px;
   height: 60px;
   display: flex;
@@ -86,12 +72,14 @@ header > nav {
   border: 1px lightgrey solid;
   border-radius: 15px;
   background-color: white;
-
   font-family: sans-serif;
   padding-top: 12px;
   padding-bottom: 12px;
   line-height: 30px;
+}
 
+#logout-wrapper {
+  height: 30px
 }
 
 #signup-button {
@@ -103,11 +91,11 @@ header > nav {
   padding-left: 10px;
 }
 
-#login-button {
+#login-button, #logout-button {
   cursor: pointer;
   padding-left: 10px;
 }
 
-#login-button:hover, #signup-button:hover {
+#login-button:hover, #signup-button:hover, #logout-button:hover {
   background-color: rgb(232, 232, 232);
 }
