--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,9 +2,11 @@ header {
   width: 100%;
   margin: 0;
   position: sticky;
+  top: 0px;
   display: flex;
   justify-content: center;
   border-bottom: solid lightgrey 1px;
+  background-color: white;
 }
 
 header > nav {
