--- a/frontend/src/components/AllSpots/SpotDetails.css
+++ b/frontend/src/components/AllSpots/SpotDetails.css
@@ -32,7 +32,7 @@
   padding-top: 24px;
   box-sizing: border-box;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   /* align-items: center; */
   flex-direction: column;
   grid-area: header;
