--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -39,7 +39,7 @@
 }
 
 .login-submit-buttons {
-  background-color: rgb(255, 56, 92);
+  background-color: #FF385C;
   color: white;
   width: 380px;
   height: 40px;
