--- a/frontend/src/components/AllSpots/CreateSpotForm.css
+++ b/frontend/src/components/AllSpots/CreateSpotForm.css
@@ -41,6 +41,10 @@
   box-sizing: border-box;
 }
 
+.label-input-fields-create-spot:hover {
+  border: 2.5px solid black;
+}
+
 #create-spot-property-description-input-field {
   min-width: 80px;
   min-height: 150px;
@@ -55,11 +59,15 @@
 }
 
 .create-spot-submit-buttons {
-  background-color: rgb(255, 56, 92);
+  background-color: #FF385C;
   color: white;
   width: 380px;
   height: 40px;
   border-radius: 10px;
   font-size: 18px;
   cursor: pointer;
+}
+
+.create-spot-submit-buttons:hover {
+  border: 3px solid black;
 }
