--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -31,6 +31,33 @@ header > nav {
   justify-content: center;
 }
 
+#greeting-message {
+  color: #FF385C;
+  font-weight: 600;
+}
+
+#become-a-host-and-dropdown-div {
+  display: flex;
+  width: 250px;
+  justify-content: space-between;
+}
+
+#become-a-host-navlink {
+  text-decoration: none;
+  color: black;
+  /* border: 1px black solid; */
+  padding: 10px;
+  border-radius: 20px;
+  font-size: 0.9em;
+  /* font-weight: 600; */
+  display: flex;
+  align-items: center;
+}
+
+#become-a-host-navlink:hover {
+  background-color: rgb(241, 240, 240);
+}
+
 
 #main-nav-menu > #main-nav-menu-button, #main-logged-in-menu > #main-logged-in-menu-button {
   display: flex;
