--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -39,7 +39,7 @@
 }
 
 #signup-submit-button {
-  background-color: rgb(255, 56, 92);
+  background-color: #FF385C;
   color: white;
   width: 380px;
   height: 40px;
