--- a/frontend/src/components/AllSpots/CurrentUserSpots.css
+++ b/frontend/src/components/AllSpots/CurrentUserSpots.css
@@ -1,7 +1,7 @@
 #splash-container-current-user {
   width: 100%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  /* margin-top: 10px; */
+  /* margin-bottom: 10px; */
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -10,7 +10,7 @@
 
 #title-banner-current-user-container {
   height: 160px;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
