--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
   margin: 0;
   position: sticky;
-  top: 0px;
+  top: 0;
   display: flex;
   justify-content: center;
   border-bottom: solid lightgrey 1px;
