--- a/frontend/src/components/Reviews/Reviews.css
+++ b/frontend/src/components/Reviews/Reviews.css
@@ -3,10 +3,11 @@
   /* margin-bottom: 20px; */
   display: grid;
   /* grid-template-columns: 1fr; */
-  grid-template-rows: 30px 140px auto auto;
+  /* width: 100%; */
+  grid-template-columns: 100%;
+  grid-template-rows: 30px auto auto;
   grid-template-areas:
     "avgStars-countReviews"
-    "reviewsBarsImage"
     "reviewsList"
     "createNewReview";
 }
@@ -18,10 +19,6 @@
   width: 330px;
   /* height: 50px; */
   justify-content: space-between;
-}
-
-#reviewBarImage {
-  grid-area: reviewsBarsImage;
 }
 
 #reviews-list-container {
@@ -51,7 +48,7 @@
   padding: 5px;
   /* display: flex; */
   box-sizing: border-box;
-  width: 100%;
+  width: 80%;
 }
 
 #review-dates {
