--- a/frontend/src/components/AllSpots/CurrentUserSpots.css
+++ b/frontend/src/components/AllSpots/CurrentUserSpots.css
@@ -71,7 +71,7 @@
   margin-top: 10px;
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
   column-gap: 15px;
   row-gap: 20px;
@@ -98,8 +98,8 @@
 }
 
 .allspots-images {
-  width: 100%;
-  height: 260px;
+  width: 250px;
+  height: 250px;
   border-radius: 10px;
   display: flex;
   justify-content: center;
