--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,6 +1,6 @@
 #login-form {
   width: 400px;
-  height: 340px;
+  /* height: 340px; */
   padding: 20px;
   border-radius: 10px;
   border: black solid 1px;
@@ -46,4 +46,12 @@
   border-radius: 10px;
   font-size: 18px;
   cursor: pointer;
+}
+
+.error-messages-handling {
+  color: red;
+}
+
+.label-input-fields-login:hover, .login-submit-buttons:hover {
+  border: 3px solid black;
 }
