--- a/frontend/src/components/Reviews/Reviews.css
+++ b/frontend/src/components/Reviews/Reviews.css
@@ -49,6 +49,7 @@
   /* display: flex; */
   box-sizing: border-box;
   width: 80%;
+  word-break: break-word;
 }
 
 #review-dates {
@@ -63,6 +64,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 10px;
+  width: 100%;
 }
 
 .new-review-buttons {
@@ -79,18 +81,27 @@
   border: 3px black solid;
 }
 
-#reviews-form {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto;
-  gap: 10px;
+#reviews-form-new-with-errors-container {
   width: 100%;
 }
 
+#reviews-form {
+  display: grid;
+  grid-template-columns: 50% auto auto;
+  grid-template-rows: auto;
+  gap: 10px;
+  width: 100%;
+  justify-content: space-between;
+}
+
 #review-text-area {
-  min-width: 400px;
-  min-height: 150px;
-  border-radius: 10px;
+  width: 100%;
+  /* min-width: 400px; */
+  height: 150px;
+  border-radius: 5px;
+  resize: none;
+  word-break: break-word;
+  font-size: large;
 }
 
 #review-text-area:hover {
@@ -99,12 +110,13 @@
 }
 
 #review-stars-div {
-  /* min-width: 120px; */
-  max-width: 100px;
+  width: 100px;
+  /* max-width: 100px; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  padding: 5px;
   /* align-self: center; */
 }
 
@@ -122,10 +134,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 100%;
 }
 
-#review-submit-button {
+#review-submit-button, #review-cancel-submission {
   background-color: #FF385C;
+  color: white;
+  width: 100%;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 #delete-review-button {
