--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,6 +1,6 @@
 #signup-form {
   width: 400px;
-  height: 440px;
+  /* height: 440px; */
   padding: 20px;
   border-radius: 10px;
   border: black solid 1px;
@@ -46,4 +46,12 @@
   border-radius: 10px;
   font-size: 18px;
   cursor: pointer;
+}
+
+.error-messages-handling {
+  color: red;
+}
+
+.label-input-fields-signup:hover, #signup-submit-button:hover {
+  border: 3px solid black;
 }
